--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Roosan Reseptit</title>
 </head>
 <body>
+    <!-- Div-elementti, johon React-sovellus renderöidään -->
     <div id="root"></div>
-    <script src="index.js"></script>
+    
+    <!-- Script-elementti, joka viittaa React-sovelluksen bundle-tiedostoon -->
+    <script src="build/static/js/main.<tunniste>.js"></script>
 </body>
 </html>
+
 
